--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="./css/master.css">
     <title>Hello, world!</title>
@@ -16,8 +17,8 @@
         <div class="row">
             <div id="infoPerfil" class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="./../BananaTube-2/Patri/img/pollo.jpg" alt="Card image">
-                    <div class="card-img-overlay">
+                    <div class="perfil">
+                        <img class="card-img-top" src="./../BananaTube-2/Patri/img/pollo.jpg" alt="Card image">
                         <h4 class="card-title">Patricia de Santiago</h4>
                     </div>
                     <div class="card-body">
@@ -27,24 +28,66 @@
                       <p class="card-text"><i class="fas fa-phone"></i> +34 636104911</p>
                       <p class="card-text"><i class="fas fa-birthday-cake"></i> 25 años</p>
                       <hr>
-                      <p class="card-text"><i class="fas fa-certificate"></i>   Habilidades</p>
+                      <p class="card-text"><i class="fas fa-bolt"></i>   Habilidades</p>
                       <hr>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
-                      <p class="card-text"><i class="fab fa-html5"></i>HTML5</p>
-                      <p class="card-text"><i class="fab fa-css3-alt"></i>CSS3</p>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
-                      <p class="card-text">Paquete de Office</p>
-                      <p class="card-text">Photoshop</p>
+                      <p class="card-text"><i class="devicon-codeigniter-plain"></i>    Quemar a Gianmarco</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-git-plain"></i>    git</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-html5-plain"></i>  HTML5</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-css3-plain"></i>   CSS3</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-bootstrap-plain"></i>  Bootstrap</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-javascript-plain"></i> JavaScript</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-jquery-plain"></i> jQuery</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-angularjs-plain"></i>  AngularJS</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-nodejs-plain"></i></i> node.js</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-mongodb-plain"></i>    Mongo</p>
+                      <div class="progress">
+                         <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-express-original"></i> Express</p>
+                      <div class="progress">
+                         <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                      </div>
+                      <hr>
+                      <p class="card-text"><i class="fas fa-cog"></i>   Herramientas y metodologías</p>
+                      <hr>
+                      <p class="card-text"><i class="devicon-windows8-original"></i>    Office</p>
+                      <p class="card-text"><i class="devicon-photoshop-plain"></i>  Photoshop</p>
+                      <p class="card-text"></i><i class="devicon-visualstudio-plain"></i>   Visual Studio</p>
+                      <p class="card-text"><i class="devicon-linux-plain"></i>  Linux</p>
+                      <p class="card-text"><i class="fas fa-users"></i> SCRUM</p>
+                      <p class="card-text"><i class="fas fa-desktop"></i><i class="fas fa-mobile-alt"></i>  Responsive Desing</p>
                     </div>
                 </div>
+            </div>
+            <div id="datosPerfil" class="col-8">
+                
             </div>
         </div>
     </div>
