no se que más poner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="./css/master.css">
-    <title>Hello, world!</title>
+    <title>Patricia de Santiago</title>
   </head>
   <body>
     <div class="content">
@@ -87,7 +87,13 @@
                 </div>
             </div>
             <div id="datosPerfil" class="col-8">
-                
+                <div class="card">
+                    <h3><i class="fas fa-child"></i>    Sobre mí</h3>
+                    <p>Hola, me llamo Patricia, soy Front-End developer y psicóloga.</p> 
+                    <p>Empecé un curso de Front-End y gracias a ello he descubierto nuevos horizontes profesionales. Me gusta la programación
+                        y aquí está la muestra. Me encantaría trabajar como Front-End developer y desarrollar apps molonas.
+                    </p>
+
             </div>
         </div>
     </div>
