--- a/cv.html
+++ b/cv.html
@@ -25,10 +25,10 @@
                       <p class="card-text"><i class="fas fa-briefcase"></i> Desarrolladora Front-End y Psicóloga</p>
                       <p class="card-text"><i class="fas fa-thumbtack"></i> Madrid</p>
                       <p class="card-text"><i class="fas fa-envelope"></i>  patriciadesantiagogallego@gmail.com</p>
-                      <p class="card-text"><i class="fas fa-phone"></i> +34 636104911</p>
+                      <p class="card-text"><i class="fas fa-phone"></i> +34 636 10 49 11</p>
                       <p class="card-text"><i class="fas fa-birthday-cake"></i> 25 años</p>
                       <hr>
-                      <a class="card-text" data-toggle="collapse" data-target="#habilidades"><i class="fas fa-bolt"></i>Habilidades</a>
+                      <a class="card-text" data-toggle="collapse" data-target="#habilidades"><!--<i class="fas fa-bolt"></i>--><i class="fas fa-plus"></i>      <u>Habilidades</u></a>
                       <hr>
                       <div id='habilidades' class='collapse'>
                         <p class="card-text"><i class="devicon-codeigniter-plain"></i>    Quemar a Gianmarco</p>
@@ -77,7 +77,7 @@
                         </div>
                       </div>
                         <hr>
-                        <a class="card-text" data-toggle="collapse" data-target="#herramientas"><i class="fas fa-cog"></i>   Herramientas y metodologías</a>
+                        <a class="card-text" data-toggle="collapse" data-target="#herramientas"> <!--<i class="fas fa-cog"></i>--><i class="fas fa-plus"></i>   <u>Herramientas y metodologías</u>  </a>
                         <hr>
                         <div id='herramientas' class='collapse'>
                           <p class="card-text"><i class="devicon-windows8-original"></i>    Office</p>
