--- a/main.html
+++ b/main.html
@@ -5,35 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Patricia SG</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <div id='main'>
-        <div class="app1">
-            <a href='files/CV.pdf'><img src='img/lanzar.png'/></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+        <div class="app1 center">
+            <a href='cv.html'><img src='img/lanzar.png'/></a>
+            <p><a href='cv.html'>Mi CV</a></p>
         </div>
-        <div class="app2">
-            <a href='files/CV.pdf'><img src='img/carpeta.png' /></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+        <div class="app2 center">
+            <a href='https://github.com/Pa7ry'><img src='img/github.png' /></a>
+            <p><a href='https://github.com/Pa7ry'>GitHub</a></p>
         </div>
-        <div class="app3">
-            <a href='files/CV.pdf'><img src='img/persona.png'/></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+        <div class="app3 center" id='me'>
+            <a href='#'><img src='img/persona.png'/></a>
+            <p><a href='#'>Contacto</a></p>
         </div>
-        <div class="app4">
+        <div class="app4 center">
             <a href='files/CV.pdf'><img src='img/prueba.png'/></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+            <p><a href='files/CV.pdf'>Notas</a></p>
         </div>
-        <div class="app5">
+        <div class="app5 center">
             <a href='files/CV.pdf'><img src='img/rompecabezas.png' /></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+            <p><a href='files/CV.pdf'>Juegos</a></p>
         </div>
-        <div class="app6">
+        <div class="app6 center">
             <a href='files/CV.pdf'><img src='img/configuracion.png' /></a>
-            <a href='files/CV.pdf'>Mi CV</a>
+            <p><a href='files/CV.pdf'>Herramientas</a></p>
+        </div>
+        <div id='contacto' class='hide'>
+            <div id='menu'>
+                <b>Contacto</b> 
+                <span id='min'><i class="far fa-window-minimize"></i></span>
+                <span id='close'><i class="fas fa-times"></i></span>
+            </div>
+            <div id='info'>
+                <p><b>Nombre:</b></p>
+                <p>Patricia de Santiago Gallego</p>
+                <p><b>Teléfono:</b></p>
+                <p>+34 636 10 49 11</p>
+                <p><b>Correo electrónico:</b></p>
+                <p><a href='mailto:patriciadesantiagogallego@gmail.com'>patriciadesantiagogallego@gmail.com</a></p>
+            </div>
+        </div>
+        <div id='bar' class='hide'>
+            <span id='rest'><i class="far fa-window-restore"></i></span>
+            <span id='closed'><i class="fas fa-times"></i></span>
         </div>
     </div>
-    <script src='main.js'></script>
+    <script src='./js/main.js'></script>
 </body>
 </html>
