falta responsive y foto contacto

--- a/cv.html
+++ b/cv.html
@@ -15,89 +15,110 @@
   <body>
     <div class="content">
         <div class="row">
-            <div id="infoPerfil" class="col-4">
-                <div class="card">
-                    <div class="perfil">
-                        <img class="card-img-top" id='foto' src="./img/yo.jpg" alt="Card image">
-                    </div>
-                      <h4 class="card-title">Patricia de Santiago</h4>
-                      <div class="card-body">
-                      <p class="card-text"><i class="fas fa-briefcase"></i> Desarrolladora Front-End y Psicóloga</p>
-                      <p class="card-text"><i class="fas fa-thumbtack"></i> Madrid</p>
-                      <p class="card-text"><i class="fas fa-envelope"></i>  patriciadesantiagogallego@gmail.com</p>
-                      <p class="card-text"><i class="fas fa-phone"></i> +34 636 10 49 11</p>
-                      <p class="card-text"><i class="fas fa-birthday-cake"></i> 25 años</p>
-                      <hr>
-                      <a class="card-text" data-toggle="collapse" data-target="#habilidades"><!--<i class="fas fa-bolt"></i>--><i class="fas fa-plus"></i>      <u>Habilidades</u></a>
-                      <hr>
-                      <div id='habilidades' class='collapse'>
-                        <p class="card-text"><i class="devicon-codeigniter-plain"></i>    Quemar a Gianmarco</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-git-plain"></i>    git</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-html5-plain"></i>  HTML5</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-css3-plain"></i>   CSS3</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-bootstrap-plain"></i>  Bootstrap</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-javascript-plain"></i> JavaScript</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-jquery-plain"></i> jQuery</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-angularjs-plain"></i>  AngularJS</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-nodejs-plain"></i></i> node.js</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-mongodb-plain"></i>    Mongo</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
-                        </div>
-                        <p class="card-text"><i class="devicon-express-original"></i> Express</p>
-                        <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
-                        </div>
+          <div class=col-12>
+            <span><a href='main.html'><i class="fas fa-arrow-left"></i>    Volver al escritorio</a></span>
+          </div>
+          <div id="infoPerfil" class="col-4">
+              <div class="card">
+                  <div class="perfil">
+                      <img class="card-img-top" id='foto' src="./img/yo.jpg" alt="Card image">
+                  </div>
+                    <h4 class="card-title name">Patricia de Santiago</h4>
+                    <div class="card-body">
+                    <p class="card-text"><i class="fas fa-briefcase"></i> Desarrolladora Front-End y Psicóloga</p>
+                    <p class="card-text"><i class="fas fa-thumbtack"></i> Madrid</p>
+                    <p class="card-text"><i class="fas fa-envelope"></i>  <a href='mailto:patriciadesantiagogallego@gmail.com'>patriciadesantiagogallego@gmail.com</a></p>
+                    <p class="card-text"><i class="fas fa-phone"></i> <a href='callto:636104911'>+34 636 10 49 11</a></p>
+                    <p class="card-text"><i class="fas fa-birthday-cake"></i> 25 años</p>
+                    <hr>
+                    <a class="card-text" data-toggle="collapse" data-target="#habilidades"><!--<i class="fas fa-bolt"></i>--><i class="fas fa-plus"></i>      <u>Habilidades</u></a>
+                    <hr>
+                    <div id='habilidades' class='collapse'>
+                      <p class="card-text"><i class="devicon-codeigniter-plain"></i>    Quemar a Gianmarco</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
                       </div>
-                        <hr>
-                        <a class="card-text" data-toggle="collapse" data-target="#herramientas"> <!--<i class="fas fa-cog"></i>--><i class="fas fa-plus"></i>   <u>Herramientas y metodologías</u>  </a>
-                        <hr>
-                        <div id='herramientas' class='collapse'>
-                          <p class="card-text"><i class="devicon-windows8-original"></i>    Office</p>
-                          <p class="card-text"><i class="devicon-photoshop-plain"></i>  Photoshop</p>
-                          <p class="card-text"></i><i class="devicon-visualstudio-plain"></i>   Visual Studio</p>
-                          <p class="card-text"><i class="devicon-linux-plain"></i>  Linux</p>
-                          <p class="card-text"><i class="fas fa-users"></i> SCRUM</p>
-                          <p class="card-text"><i class="fas fa-desktop"></i><i class="fas fa-mobile-alt"></i>  Responsive Desing</p>
-                        </div>
+                      <p class="card-text"><i class="devicon-git-plain"></i>    git</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-html5-plain"></i>  HTML5</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-css3-plain"></i>   CSS3</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-bootstrap-plain"></i>  Bootstrap</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-sass-plain"></i></i> Sass</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-javascript-plain"></i> JavaScript</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-jquery-plain"></i> jQuery</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                      </div>
+                      <p class="card-text"><i class="devicon-angularjs-plain"></i>  AngularJS</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                      </div>
                     </div>
-                </div>
+                      <hr>
+                      <a class="card-text" data-toggle="collapse" data-target="#herramientas"> <!--<i class="fas fa-cog"></i>--><i class="fas fa-plus"></i>   <u>Herramientas y metodologías</u>  </a>
+                      <hr>
+                      <div id='herramientas' class='collapse'>
+                        <p class="card-text"><i class="devicon-windows8-original"></i>    Office</p>
+                        <p class="card-text"><i class="devicon-photoshop-plain"></i>  Photoshop</p>
+                        <p class="card-text"></i><i class="devicon-visualstudio-plain"></i>   Visual Studio</p>
+                        <p class="card-text"><i class="devicon-linux-plain"></i>  Linux</p>
+                        <p class="card-text"><i class="fas fa-users"></i> SCRUM</p>
+                        <p class="card-text"><i class="fas fa-desktop"></i><i class="fas fa-mobile-alt"></i>  Responsive Desing</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div id="datosPerfil" class="col-8">
+            <div class="card">
+                <h4><i class="fas fa-child"></i>    Sobre mí</h4>
+                <p>Hola, me llamo Patricia, soy Front-End developer y psicóloga.</p> 
+                <p>Empecé un curso de Front-End y gracias a ello he descubierto nuevos horizontes profesionales. Me gusta la programación
+                    y aquí está la muestra. Me encantaría trabajar como Front-End developer y desarrollar apps molonas.
+                </p>
             </div>
-            <div id="datosPerfil" class="col-8">
-                <div class="card">
-                    <h3><i class="fas fa-child"></i>    Sobre mí</h3>
-                    <p>Hola, me llamo Patricia, soy Front-End developer y psicóloga.</p> 
-                    <p>Empecé un curso de Front-End y gracias a ello he descubierto nuevos horizontes profesionales. Me gusta la programación
-                        y aquí está la muestra. Me encantaría trabajar como Front-End developer y desarrollar apps molonas.
-                    </p>
-
+            <div class="card">
+              <h4><i class="fas fa-book"></i>    Formación académica</h4>
+              <ul>
+                <li><b>Programa formativo Front-End Developer</b> - Generation Spain, McKinsey, Netmind</li>
+                <li><b>Máster en Psicología Clínica: Práctica profesional</b> - Universidad Complutense de Madrid</li>
+                <li><b>Grado en Psicología</b> - Universidad Complutense de Madrid</li>
+              </ul>
+            </div>
+            <div class="card">
+              <h4><i class="fas fa-suitcase"></i>    Experiencia laboral</h4>
+              <ul>
+                <li><b>Avansis (HR Consultant IT)</b> - Marzo 2018 - Actualmente
+                  <p>Búsqueda de candidatos y publicación de ofertas en diferentes portales de empleo. Reclutamiento digital (Redes sociales ).
+                  Headhunting Gestión técnica y de negocio sobre servicios IT, desarrollo de proyectos y gestión del cambio. Identificación
+                  y atracción de nuevos clientes. Procesos tecnológicos en España y a nivel internacional (Europa y América Latina). Procesos
+                  de negociación con clientes y candidatos.</p></li>
+                <li><b>SAMUR - Protección civil (Psicóloga y técnico de emergencias)</b> - Julio 2014 - Actualmente
+                <p>Voluntariado en Protección Civil llevando a cabo tareas como Técnico de Emergencias y en colaboración con el equipo Psicosocial
+                en calidad de psicóloga.</p></li>
+                <li><b>Unidad Clínica del Máster de Psicología Clínica: Práctica Profesional</b> - Noviembre 2015 - Julio 2017
+                <p>Asistencia psicológica basada en la terapia cognitivo-conductual a pacientes con problemática de diversa índole y con cualquier
+                edad.</p></li>
+                <li><b>Centro de Rehabilitación Psicosocial de Aranjuez (Hermanas Hospitalarias de Sagrado Corazón de Jesús) (Psicóloga)</b> - Enero 2016 - Julio 2017
+                <p>Coterapeuta en la atención psicológica individual e impartición de taller de "Vida independiente" y "Rehabilitación Cognitiva"
+                basada en el programa REHACOP. Además de colaborar en proyectos del área de investigación de dicha institución como evaluadora y terapeuta en los talleres impartidos.</p></li>
+              </ul>
             </div>
         </div>
     </div>
