--- a/main.html
+++ b/main.html
@@ -28,14 +28,14 @@
             <a href='#'><img src='img/prueba.png'/></a>
             <p><a href='#'>Notas</a></p>
         </div>
-        <div class="app5 center">
+        <div  id='games' class="app5 center">
             <a href='#'><img src='img/rompecabezas.png' /></a>
             <p><a href='#'>Juegos</a></p>
         </div>
-        <div class="app6 center">
+        <!--<div class="app6 center">
             <a href='#'><img src='img/configuracion.png' /></a>
             <p><a href='#'>Herramientas</a></p>
-        </div>
+        </div>-->
         <div id='contacto' class='hide'>
             <div id='menu'>
                 <b>Contacto</b> 
@@ -48,12 +48,13 @@
                 <p><b>Nombre:</b></p>
                 <p>Patricia de Santiago Gallego</p>
                 <p><b>Teléfono:</b></p>
-                <p>+34 636 10 49 11</p>
+                <p><a href='callto:636104911'>+34 636 10 49 11</a></p>
                 <p><b>Correo electrónico:</b></p>
                 <p><a href='mailto:patriciadesantiagogallego@gmail.com'>patriciadesantiagogallego@gmail.com</a></p>
             </div>
         </div>
         <div id='bar' class='hide'>
+            Contacto
             <span id='rest'><i class="far fa-window-restore pointer"></i></span>
             <span id='closed'><i class="fas fa-times pointer"></i></span>
         </div>
@@ -98,8 +99,28 @@
             </div>
         </div>
         <div id='bar2' class='hide'>
+            Notas
             <span id='rest2'><i class="far fa-window-restore pointer"></i></span>
             <span id='closed2'><i class="fas fa-times pointer"></i></span>
+        </div>
+        <div id='juegos' class='hide'>
+            <div id='menu3'>
+                <b>Juegos</b> 
+                <div class='right'>
+                    <span id='min3'><i class="far fa-window-minimize pointer"></i></span>
+                    <span id='close3'><i class="fas fa-times pointer"></i></span>
+                </div>
+            </div>
+            <div id='info3'>
+                <a href='pokemon.html'><img src='img/carpeta1.png'></a>
+                <p><a href='pokemon.html'>Pokémon (versión alpha)</a></p>
+            </div>
+        </div>
+        <div id='bar3' class='hide'>
+            Juegos
+            <span id='rest3'><i class="far fa-window-restore pointer"></i></span>
+            <span id='closed3'><i class="fas fa-times pointer"></i></span>
+        </div>
         </div>
         <span id='secreto'></span>
     </div>
