--- a/main.html
+++ b/main.html
@@ -44,6 +44,9 @@
                     <span id='close'><i class="fas fa-times pointer"></i></span>
                 </div>
             </div>
+            <div id='foto'>
+                <img src='img/fcontacto.jpg'>
+            </div>
             <div id='info'>
                 <p><b>Nombre:</b></p>
                 <p>Patricia de Santiago Gallego</p>
@@ -121,8 +124,7 @@
             <span id='rest3'><i class="far fa-window-restore pointer"></i></span>
             <span id='closed3'><i class="fas fa-times pointer"></i></span>
         </div>
-        </div>
-        <span id='secreto'></span>
+        <div id='secreto'></div>
     </div>
     <script src='./js/main.js'></script>
 </body>
